<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/registration"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/email_reg"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/password_reg"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password" />

            <Button
                android:id="@+id/btn_reg"
                android:background="@drawable/edittext_background"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/reg_btn"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/tv_sign_in_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/already_have_account_sign_in_here" />


        </LinearLayout>


    </ScrollView>
    
    
</LinearLayout>