<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="5dp"
    android:elevation="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
 
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/data_txt_rv"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/date_txt_income"
                android:textColor="@color/data_color"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/type_txt_recycler"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/type_txt_income"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/note_desc"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_below="@id/type_txt_income"
                android:textStyle="bold"
                android:id="@+id/note_txt_income"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/_600000_txt_rv_amount"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/amount_txt_income"
                android:textColor="@color/data_color"
                android:layout_height="wrap_content"/>


        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>