<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DashBoardFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/income_tv_fr"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/expense_tv_fr"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/income_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/_000_00"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/expense_set_result"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/_000_00_"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="160dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/expense_ft_text"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/expense_ft_tv"
                android:background="@color/nav_header"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#07bca4"
                android:elevation="6dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="90dp"

            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/income_ft_text"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:background="@color/nav_header"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/income_ft_tv"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#1ce10a"
                android:elevation="6dp"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_main_plus_btn"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#6A1B9A"
            app:fabSize="normal"
            android:src="@drawable/income"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>